more balloon position left

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <h1 class="title title-balloon">
             <span class="word-balloon">B</span>
             <p>
-                <span class="word-balloon">a</span>
-                <span class="word-balloon">l</span>
-                <span class="word-balloon">l</span>
-                <span class="word-balloon">o</span>
+                <span class="word-balloon word-allo">a</span>
+                <span class="word-balloon word-allo">l</span>
+                <span class="word-balloon word-allo">l</span>
+                <span class="word-balloon word-allo">o</span>
             </p>
             <span class="word-balloon">o</span>
             <span class="word-balloon">n</span>
