--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <div class="wrapper wrapper-balloon">
         <h1 class="title title-balloon">
             <span class="word-balloon">B</span>
-            <p>
+            <div class="title-allo">
                 <span class="word-balloon word-allo">a</span>
                 <span class="word-balloon word-allo">l</span>
                 <span class="word-balloon word-allo">l</span>
                 <span class="word-balloon word-allo">o</span>
-            </p>
+            </div>
             <span class="word-balloon">o</span>
             <span class="word-balloon">n</span>
         </h1>
